--- a/_static-build/sass/layout/_body.scss
+++ b/_static-build/sass/layout/_body.scss
@@ -36,6 +36,9 @@ body {
 
 
 @media #{$min-m} {
+    body {
+        background: $bg url('../images/bg-barrels.jpg') no-repeat 50% 0;
+    }
     .content {
         padding: $line*2;
     }
