--- a/_static-build/sass/layout/_search.scss
+++ b/_static-build/sass/layout/_search.scss
@@ -35,6 +35,28 @@ Search Pages
                 // color: $primary;
                 list-style: disc;
             }
+            a {
+                position: relative;
+                &:after {
+                    content: '';
+                    display: block;
+                    width: 8px;
+                    height: 8px;
+                    background: transparent url('../images/icon-plus.png') no-repeat 50% 50%;
+                    background-size: 8px;
+                    position: absolute;
+                    left: -16px;
+                    top: $line/2 - 4px;
+                    z-index: -1;
+                    opacity: 0;
+                    // pointer-events: none;
+                    transition: all 0.2s ease-out;
+                }
+                &:hover:after {
+                    opacity: 0.8;
+                    z-index: 1;
+                }
+            }
         }
     }
     &__toggle {
@@ -47,12 +69,45 @@ Search Pages
         background: $primary-dark;
         background: url('../images/bg-polygons.svg') no-repeat 0 100%,
                     linear-gradient(to right, $primary-dark, $accent-dark);
+        &__arrow {
+            display: inline-block;
+            vertical-align: middle;
+            max-height: 13px;
+            margin-left: $line/2;
+            transition: all 0.2s ease-out;
+        }
+        &.is-active &__arrow {
+            transform: rotate(90deg);
+        }
     }
 }
 
 .search-current-filters {
     padding: $line;
     line-height: $line*1.5;
+    &__close {
+        position: relative;
+        &:after {
+            content: '';
+            display: block;
+            width: 8px;
+            height: 8px;
+            background: transparent url('../images/icon-x.png') no-repeat 50% 50%;
+            background-size: 8px;
+            position: absolute;
+            left: 50%;
+            margin-left: -4px;
+            top: -12px;
+            z-index: -1;
+            opacity: 0;
+            // pointer-events: none;
+            transition: all 0.2s ease-out;
+        }
+        &:hover:after {
+            opacity: 0.8;
+            z-index: 1;
+        }
+    }
 }
 
 
@@ -85,13 +140,12 @@ Search Pages
     }
     .search-refine {
         width: 25%;
-        padding: 0;
+        padding: 0 $line $line*2 0;
         float: left;
-        padding-right: $line;
     }
     .search-content {
         width: 75%;
-        padding: 0;
+        padding: 0 0 $line*2;
         float: right;
     }
 
