--- a/app/templates/admin_list_drinktypes.html
+++ b/app/templates/admin_list_drinktypes.html
@@ -1,15 +1,20 @@
-{% extends "base.html" %}
+{% extends "admin_base.html" %}
 
 {% block body %}
     <section role="main">
         <div class="content">
             <div class="page-bound">
 
-                {% for drink_type in drink_types %}
-                    <p>{{ drink_type.name }}</p>
-                {% else %}
-                    <p>No drink types added yet. <a href="{{ url_for('admin_new_drinktype') }}">Add one</a>.</p>
-                {% endfor %}
+                <ul>
+                    {% for drink_type in drink_types %}
+                        <li><p>
+                            <a href="/admin/drinktype/{{ drink_type.id }}">{{ drink_type.name }}</a>
+                            <a href="/admin/remove/drinktype/{{ drink_type.id }}">(delete)</a>
+                        </p></li>
+                    {% else %}
+                        <li><p>No drink types added yet. <a href="{{ url_for('admin_new_drinktype') }}">Add one</a>.</p></li>
+                    {% endfor %}
+                </ul>
 
                 <p><a href="{{ url_for('admin_new_drinktype') }}">Add new</a></p>
 
