Add distiller management

--- a/app/templates/admin_base.html
+++ b/app/templates/admin_base.html
@@ -37,6 +37,7 @@
             <nav class="page-nav">
                 <a href="{{ url_for('admin_list_drinktypes') }}" class="page-nav__item"><span>Types</span></a>
                 <a href="{{ url_for('admin_list_origins') }}" class="page-nav__item"><span>Origins</span></a>
+                <a href="{{ url_for('admin_list_distillers') }}" class="page-nav__item"><span>Distillers</span></a>
             </nav>
         </div>
     </header>
