--- a/app/templates/admin_edit_origin.html
+++ b/app/templates/admin_edit_origin.html
@@ -3,7 +3,7 @@
 {% block body %}
     <section role="main">
         <div class="content">
-            <form action="{{ url_for('save_origin') }}" method="POST" class="page-bound">
+            <form action="{{ url_for('admin_save_origin') }}" method="POST" class="page-bound">
                 {% if origin %}
                     <p>Editing origin #{{ origin.id }}: {{ origin.name }}</p>
                     <input type="hidden" name="id" value="{{ origin.id }}" />
