--- a/app/templates/admin_list_drinktypes.html
+++ b/app/templates/admin_list_drinktypes.html
@@ -8,8 +8,8 @@
                 <ul>
                     {% for drink_type in drink_types %}
                         <li><p>
-                            <a href="/admin/drinktype/{{ drink_type.id }}">{{ drink_type.name }}</a>
-                            <a href="/admin/drinktype/remove/{{ drink_type.id }}">(delete)</a>
+                            <a href="{{ url_for('admin_edit_drinktype', drink_type_id=drink_type.id) }}">{{ drink_type.name }}</a>
+                            <a href="{{ url_for('admin_remove_drinktype', drink_type_id=drink_type.id) }}">(delete)</a>
                         </p></li>
                     {% else %}
                         <li><p>No drink types added yet. <a href="{{ url_for('admin_new_drinktype') }}">Add one</a>.</p></li>
