--- a/app/templates/admin_list_origins.html
+++ b/app/templates/admin_list_origins.html
@@ -8,8 +8,8 @@
                 <ul>
                     {% for origin in origins %}
                         <li><p>
-                            <a href="/admin/origin/{{ origin.id }}">{{ origin.name }}</a>
-                            <a href="/admin/origin/remove/{{ origin.id }}">(delete)</a>
+                            <a href="{{ url_for('admin_edit_origin', origin_id=origin.id) }}">{{ origin.name }}</a>
+                            <a href="{{ url_for('admin_remove_origin', origin_id=origin.id) }}">(delete)</a>
                         </p></li>
                     {% else %}
                         <li><p>No origins added yet. <a href="{{ url_for('admin_new_origin') }}">Add one</a>.</p></li>
