--- a/app/templates/review_list.html
+++ b/app/templates/review_list.html
@@ -16,22 +16,33 @@
         </header>
 
         <div class="search-current-filters">
-            <p>Showing all reviews. Filters to be implemented</p>
+            {#
+            {% if filters %}
+                <p>
+                    Showing
+                    {% if filters['type'] %}
+                        <a href="{{ modify_query(type=None) }}" class="search-current-filters__close">{{ filters['type'][1] }}s</a>.
+                    {% endif %}
+                    You can <a href="{{ request.path }}" class="search-current-filters__close">remove all these filters</a> if you'd like.</p>
+                </p>
+            {% else %}
+                <p>Showing all reviews. Filters to be implemented</p>
+            {% endif %}
+            #}
         </div>
 
         <div class="search-layout">
-            <button type="button" class="search-refine__toggle" data-toggle-target="next">Refine <img src="images/arrow-right.png" alt="" class="search-refine__toggle__arrow" /></button>
+            <button type="button" class="search-refine__toggle" data-toggle-target="next">Refine <img src="/static/images/arrow-right.png" alt="" class="search-refine__toggle__arrow" /></button>
             <div class="search-refine">
                 <div class="grid">
                     <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                         <h3 class="search-refine__facet__title">Type</h3>
                         <ul class="search-refine__facet__list">
-                            <li class="search-refine__facet__item"><a href="#0">American single-malt</a></li>
-                            <li class="search-refine__facet__item is-current">Bourbon</li>
-                            <li class="search-refine__facet__item"><a href="#0">Rye</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">Scotch (blended)</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">Scotch (single-malt)</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">World</a></li>
+                            {% for key, vals in drink_types.items()|sort(attribute='0') %}
+                                <li class="search-refine__facet__item">
+                                    <a href="{{ modify_query(type=key) }}">{{ vals['name'] }}</a>
+                                </li>
+                            {% endfor %}
                         </ul>
                     </div>
                     <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
@@ -82,10 +93,11 @@
                     <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                         <h3 class="search-refine__facet__title">Rarity</h3>
                         <ul class="search-refine__facet__list">
-                            <li class="search-refine__facet__item is-current">Common</li>
-                            <li class="search-refine__facet__item"><a href="#0">Uncommon</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">Hard to find</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">Not happening</a></li>
+                            {% for key, vals in rarities.items()|sort(attribute='1.value') %}
+                                <li class="search-refine__facet__item">
+                                    <a href="{{ modify_query(rarity=key) }}">{{ vals['name'] }}</a>
+                                </li>
+                            {% endfor %}
                         </ul>
                     </div>
                 </div>
