--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -54,7 +54,7 @@
                 <li class="title-bar__datum grid__unit grid__unit--1-2-s grid__unit--1-3-m">
                     {% if review.drink_type %}
                         <span class="title-bar__datum__prop">Type:</span>
-                        <span class="title-bar__datum__value">{{ review.drink_type.name }}</span>
+                        <span class="title-bar__datum__value">{{ drink_types[review.drink_type].name }}</span>
                     {% else %}
                         <span class="title-bar__datum__prop">Unknown type</span>
                     {% endif %}
@@ -76,15 +76,7 @@
                 <li class="title-bar__datum grid__unit grid__unit--1-2-s grid__unit--1-3-m">
                     {% if review.rarity %}
                         <span class="title-bar__datum__prop">Rarity:</span>
-                        {% if review.rarity >= 40 %}
-                            <span class="title-bar__datum__value">Not happening</span>
-                        {% elif review.rarity >= 30 %}
-                            <span class="title-bar__datum__value">Rare</span>
-                        {% elif review.rarity >= 20 %}
-                            <span class="title-bar__datum__value">Uncommon</span>
-                        {% else %}
-                            <span class="title-bar__datum__value">Common</span>
-                        {% endif %}
+                        <span class="title-bar__datum__value">{{ rarities[review.rarity].name }}</span>
                     {% else %}
                         <span class="title-bar__datum__prop">Unknown rarity</span>
                     {% endif %}
