--- a/app/templates/review_list.html
+++ b/app/templates/review_list.html
@@ -25,7 +25,23 @@
                         <a href="{{ modify_query(type=None) }}" class="search-current-filters__close">{{ drink_types[request.args['type']].filter_name }}</a>
                     {% else %}
                         whiskies
-                    {% endif %}.
+                    {% endif %}
+                    {% if request.args['age'] %}
+                        <a href="{{ modify_query(age=None) }}" class="search-current-filters__close">{{ age_ranges[request.args['age']].filter_name }}</a>
+                    {% endif %}
+                    {% if request.args['origin'] %}
+                        distilled in
+                        <a href="{{ modify_query(origin=None) }}" class="search-current-filters__close">{{ this_origin.name }}</a>
+                    {% endif %}
+                    {% if request.args['proof'] %}
+                        bottled at
+                        <a href="{{ modify_query(proof=None) }}" class="search-current-filters__close">{{ proof_ranges[request.args['proof']].filter_name }}</a>
+                    {% endif %}
+                    {% if request.args['price'] %}
+                        sold for
+                        <a href="{{ modify_query(price=None) }}" class="search-current-filters__close">{{ price_ranges[request.args['price']].filter_name }}</a>
+                    {% endif %}
+                    .
                     You can <a href="{{ request.path }}" class="search-current-filters__close">remove all these filters</a> if you'd like.</p>
                 </p>
             {% else %}
@@ -56,46 +72,65 @@
                     <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                         <h3 class="search-refine__facet__title">Age</h3>
                         <ul class="search-refine__facet__list">
-                            <li class="search-refine__facet__item"><a href="#0">Unknown / no age statement</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">Under 2 years</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">2 &ndash; 4 years</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">5 &ndash; 10 years</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">10 &ndash; 15 years</a></li>
-                            <li class="search-refine__facet__item is-current">Over 15 years</li>
+                            {% for key, vals in age_ranges.items()|sort(attribute='1.age_min') %}
+                                {% if request.args['age'] == key %}
+                                    <li class="search-refine__facet__item is-current">
+                                        {{ vals['name'] }}
+                                    </li>
+                                {% else %}
+                                    <li class="search-refine__facet__item">
+                                        <a href="{{ modify_query(age=key) }}">{{ vals['name'] }}</a>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
                         </ul>
                     </div>
                     <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
-                        <h3 class="search-refine__facet__title">Distiller</h3>
+                        <h3 class="search-refine__facet__title">Distilled in</h3>
                         <ul class="search-refine__facet__list">
-                            <li class="search-refine__facet__item"><a href="#0">American craft distilleries</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">Bernheim (new)</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">Bernheim (old)</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">Brown-Forman</a></li>
-                            <li class="search-refine__facet__item is-current">Buffalo Trace / Sazerac</li>
-                            <li class="search-refine__facet__item"><a href="#0">Four Roses</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">Heaven Hill</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">Stitzel-Weller</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">Unknown/NDP</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">Other</a></li>
+                            {% for origin in origins|sort(attribute='name') %}
+                                {% if request.args['origin'] == origin.id|string %}
+                                    <li class="search-refine__facet__item is-current">
+                                        {{ origin.name }}
+                                    </li>
+                                {% else %}
+                                    <li class="search-refine__facet__item">
+                                        <a href="{{ modify_query(origin=origin.id) }}">{{ origin.name }}</a>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
                         </ul>
                     </div>
                     <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                         <h3 class="search-refine__facet__title">Proof</h3>
                         <ul class="search-refine__facet__list">
-                            <li class="search-refine__facet__item"><a href="#0">80</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">81 &ndash; 90</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">90 &ndash; 100</a></li>
-                            <li class="search-refine__facet__item is-current">Over 100</li>
+                            {% for key, vals in proof_ranges.items()|sort(attribute='1.proof_min') %}
+                                {% if request.args['proof'] == key %}
+                                    <li class="search-refine__facet__item is-current">
+                                        {{ vals['name'] }}
+                                    </li>
+                                {% else %}
+                                    <li class="search-refine__facet__item">
+                                        <a href="{{ modify_query(proof=key) }}">{{ vals['name'] }}</a>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
                         </ul>
                     </div>
                     <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                         <h3 class="search-refine__facet__title">Price (MSRP)</h3>
                         <ul class="search-refine__facet__list">
-                            <li class="search-refine__facet__item"><a href="#0">Under $25</a></li>
-                            <li class="search-refine__facet__item is-current">$25 &ndash; $40</li>
-                            <li class="search-refine__facet__item"><a href="#0">$41 &ndash; $75</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">$76 &ndash; $150</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">Over $150</a></li>
+                            {% for key, vals in price_ranges.items()|sort(attribute='1.price_min') %}
+                                {% if request.args['price'] == key %}
+                                    <li class="search-refine__facet__item is-current">
+                                        {{ vals['name'] }}
+                                    </li>
+                                {% else %}
+                                    <li class="search-refine__facet__item">
+                                        <a href="{{ modify_query(price=key) }}">{{ vals['name'] }}</a>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
                         </ul>
                     </div>
                     <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
