Add grammar to current filters breakdown
Super messy. Will need to figure out a tidier system if even one more
filter type is added

--- a/app/static/sass/layout/_search.scss
+++ b/app/static/sass/layout/_search.scss
@@ -108,6 +108,13 @@ Search Pages
             z-index: 1;
         }
     }
+    &__nudge {
+        // remove whitespace between filters and period in order to keep
+        // if blocks somewhat tidier
+        display: inline-block;
+        vertical-align: baseline;
+        margin-left: -0.2em;
+    }
 }
 
 
