--- a/app/templates/review_list.html
+++ b/app/templates/review_list.html
@@ -21,31 +21,41 @@
                     Showing
                     {% if request.args['rarity'] %}
                         <a href="{{ modify_query(rarity=None) }}" class="search-current-filters__close">{{ rarities[request.args['rarity']].filter_name }}</a>
-                    {% endif %}{% if request.args['type'] %}
+                    {% endif %}
+                    {% if request.args['type'] %}
                         <a href="{{ modify_query(type=None) }}" class="search-current-filters__close">{{ drink_types[request.args['type']].filter_name }}</a>
                     {% else %}
                         whiskies
                     {% endif %}
                     {% if request.args['age'] %}
-                        <a href="{{ modify_query(age=None) }}" class="search-current-filters__close">{{ age_ranges[request.args['age']].filter_name }}</a>
+                        <a href="{{ modify_query(age=None) }}" class="search-current-filters__close">{{ age_ranges[request.args['age']].filter_name }}</a>{% if (request.args['origin'] and request.args['proof']) or (request.args['proof'] and request.args['price']) or (request.args['origin'] and request.args['price']) %},{% endif %}
                     {% endif %}
                     {% if request.args['origin'] %}
+                        {% if request.args['age'] and not (request.args['proof'] or request.args['price']) %}
+                            and
+                        {% endif %}
                         distilled in
-                        <a href="{{ modify_query(origin=None) }}" class="search-current-filters__close">{{ this_origin.name }}</a>
+                        <a href="{{ modify_query(origin=None) }}" class="search-current-filters__close">{{ this_origin.name }}</a>{% if (request.args['age'] and request.args['proof']) or (request.args['age'] and request.args['price']) or (request.args['proof'] and request.args['price']) %},{% endif %}
                     {% endif %}
                     {% if request.args['proof'] %}
+                        {% if (request.args['age'] or request.args['origin']) and not request.args['price'] %}
+                            and
+                        {% endif %}
                         bottled at
-                        <a href="{{ modify_query(proof=None) }}" class="search-current-filters__close">{{ proof_ranges[request.args['proof']].filter_name }}</a>
+                        <a href="{{ modify_query(proof=None) }}" class="search-current-filters__close">{{ proof_ranges[request.args['proof']].filter_name }}</a>{% if (request.args['origin'] and request.args['price']) or (request.args['age'] and request.args['price']) %},{% endif %}
                     {% endif %}
                     {% if request.args['price'] %}
+                        {% if request.args['age'] or request.args['origin'] or request.args['proof'] %}
+                            and
+                        {% endif %}
                         sold for
                         <a href="{{ modify_query(price=None) }}" class="search-current-filters__close">{{ price_ranges[request.args['price']].filter_name }}</a>
                     {% endif %}
-                    .
+                    <span class="search-current-filters__nudge">.</span>
                     You can <a href="{{ request.path }}" class="search-current-filters__close">remove all these filters</a> if you'd like.</p>
                 </p>
             {% else %}
-                <p class="search-current-filters__none">Showing all reviews. You can filter these reviews below</p>
+                <p class="search-current-filters__none">Showing all whiskies. You can filter this list below</p>
             {% endif %}
         </div>
 
@@ -64,6 +74,22 @@
                                 {% else %}
                                     <li class="search-refine__facet__item">
                                         <a href="{{ modify_query(type=key) }}">{{ vals['name'] }}</a>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
+                        <h3 class="search-refine__facet__title">Rarity</h3>
+                        <ul class="search-refine__facet__list">
+                            {% for key, vals in rarities.items()|sort(attribute='1.value') %}
+                                {% if request.args['rarity'] == key %}
+                                    <li class="search-refine__facet__item is-current">
+                                        {{ vals['name'] }}
+                                    </li>
+                                {% else %}
+                                    <li class="search-refine__facet__item">
+                                        <a href="{{ modify_query(rarity=key) }}">{{ vals['name'] }}</a>
                                     </li>
                                 {% endif %}
                             {% endfor %}
@@ -128,22 +154,6 @@
                                 {% else %}
                                     <li class="search-refine__facet__item">
                                         <a href="{{ modify_query(price=key) }}">{{ vals['name'] }}</a>
-                                    </li>
-                                {% endif %}
-                            {% endfor %}
-                        </ul>
-                    </div>
-                    <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
-                        <h3 class="search-refine__facet__title">Rarity</h3>
-                        <ul class="search-refine__facet__list">
-                            {% for key, vals in rarities.items()|sort(attribute='1.value') %}
-                                {% if request.args['rarity'] == key %}
-                                    <li class="search-refine__facet__item is-current">
-                                        {{ vals['name'] }}
-                                    </li>
-                                {% else %}
-                                    <li class="search-refine__facet__item">
-                                        <a href="{{ modify_query(rarity=key) }}">{{ vals['name'] }}</a>
                                     </li>
                                 {% endif %}
                             {% endfor %}
