--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -121,7 +121,7 @@
 
             <p class="article-reference">
                 <a href="ethics.htm">Review ethics</a>
-                <a href="ratings.htm">Rating scale</a>
+                <a href="ratings.htm">Why listen to me?</a>
                 <a href="glossary.htm">Lingo</a>
             </p>
 
