--- a/app/static/sass/module/_post-list.scss
+++ b/app/static/sass/module/_post-list.scss
@@ -69,6 +69,12 @@ Post Lists
     }
 }
 
+p.post-list-empty {
+    margin: $line*2 0;
+    font-style: italic;
+    opacity: 0.6;
+}
+
 
 @media #{$min-m} {
     .post-list {
@@ -91,5 +97,10 @@ Post Lists
         &__subtitle {
             font-size: $tera;
         }
+    }
+
+    p.post-list-empty {
+        margin: 0 0 $line*2;
+        text-align: center;
     }
 }
